rust/parser-style/src/snapshots/parser_style__tests__transpile_css-2.snap
---
source: rust/parser-style/src/lib.rs
assertion_line: 203
expression: "transpile_css(r#\"\n            @media (min-width: 640px) {\n                :root {\n                    font-size: 1rem;\n                    line-height: 1.5rem;\n                }\n            }\n            \"#)?.join(\"\\n\\n\")"
---
@media (min-width: 640px) {
  :root {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}
