rust/parser-style/src/snapshots/parser_style__tests__transpile_css.snap
---
source: rust/parser-style/src/lib.rs
assertion_line: 199
expression: "transpile_css(r#\"\n            .foo {\n                color: pink;\n                & .bar {\n                    color: red;\n                    & .baz .quax {\n                        color: orange;\n                    }\n                }\n            }\n            \"#)?.join(\"\\n\\n\")"
---
.foo {
  color: pink;
}

.foo .bar {
  color: red;
}

.foo .bar .baz .quax {
  color: orange;
}
