rust/parser-style/src/snapshots/parser_style__tests__transpile_tailwind-2.snap
---
source: rust/parser-style/src/lib.rs
assertion_line: 225
expression: "transpile_tailwind(r\"rounded(lg\")?[0]"
---
:root {
  border-radius: .25rem;
}
