rust/parser-style/src/snapshots/parser_style__tests__transpile_tailwind-5.snap
---
source: rust/parser-style/src/lib.rs
assertion_line: 243
expression: "transpile_tailwind(r\"border(dashed)\")?[0]"
---
:root {
  border-style: dashed;
}
