rust/parser-style/src/snapshots/parser_style__tests__transpile_tailwind_variants-2.snap
---
source: rust/parser-style/src/lib.rs
assertion_line: 261
expression: "transpile_tailwind(r\"sm:text-md md:text(lg) lg:(text(xl)) xl:(text-5xl)\")?.join(\"\\n\\n\")"
---
:root {
  font-size: 3rem;
  line-height: 100%;
}
